2002-08-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.73 released.

2002-08-14 <jiba@tuxfamily.org>

	* scm/output-lib.scm: Support of hammers and pulls in tablature
	-- Hammers and pulls are inserted exactly like slurs, and a "H" or
	a "P" is added over the slur as needed.  

	* ./input/test/tablature-hammer.ly: example of hammer, pull and
	legato in a tablature.

	* ly/engraver-init.ly: Stem.up-to-staff is now disabled by
	default, since it appears that most of the published tablatures
	are not like that.

2002-08-13  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/beam.cc (brew_molecule): use
	Staff_symbol_referencer::staff_space for thickness.

2002-08-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/lilypond.tely: Add dir entries for
	executables.

	* Documentation/user/converters.itely: 
	* Documentation/user/invoking.itexi: Fix `invocation' node names,
	in line with standard dir entries.

	* Documentation/user/convert-ly.itexi
	* Documentation/user/ly2dvi.itexi: Remove.
	
	* scripts/ly2dvi.py: Add pseudo-filter (and stdout output)
	support.

	* lily/main.c: 
	* lily/paper-score.cc : 
	* lily/gourlay-breaking.cc: Write info to stderr.

	* buildscripts/help2man.pl: Update to latest version from Debian.
	Fixes generation of man pages with perl 5.6.1.

	* GNUmakefile.in: Add python link to build-datadir.  Fixes
	generation of midi2ly man page.

2002-08-14  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* Documentation/user/{tutorial.itely, introduction.itely}: 
	Small fixes.

2002-08-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/beam.cc (least_squares): Add comment.

	* input/regression/beam-center-slope.ly: Update.

	* lily/beam-quanting.cc (score_stem_lengths): Revert oops.

	* input/template/melody-chords.ly: New file.

	* lily/stem.cc (calc_stem_info): Move, document, clean up and fix
	up-to-stem feature.

	* ly/grace-init.ly (startGraceMusic):
	* scm/grob-description.scm (beamed-lengths): Subtract half a beam